added steering commitee and nsf

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta property="og:description" content="Applied mathematician and AI researcher focused on efficient deep learning, low-rank training, and scalable optimization.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://scsteffen.github.io/">
-    <meta property="og:image" content="https://scsteffen.github.io/assets/headshot.jpeg">
+    <meta property="og:image" content="https://scsteffen.github.io/assets/headshot2.png">
     <meta property="og:locale" content="en_US">
     <meta property="og:site_name" content="Steffen Schotthöfer">
 
@@ -37,7 +37,7 @@
     <meta name="twitter:card" content="summary">
     <meta name="twitter:title" content="Steffen Schotthöfer – Research Scientist in AI & Mathematics">
     <meta name="twitter:description" content="Applied mathematician and AI researcher focused on efficient deep learning, low-rank training, and scalable optimization.">
-    <meta name="twitter:image" content="https://scsteffen.github.io/assets/headshot.jpeg">
+    <meta name="twitter:image" content="https://scsteffen.github.io/assets/headshot2.png">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
@@ -46,7 +46,7 @@
       "@type": "Person",
       "name": "Steffen Schotthöfer",
       "url": "https://scsteffen.github.io/",
-      "image": "https://scsteffen.github.io/assets/headshot.jpeg",
+      "image": "https://scsteffen.github.io/assets/headshot2.png",
       "jobTitle": "Research Scientist",
       "description": "Research Scientist in AI and Mathematics focused on efficient deep learning, low-rank training, and scalable optimization.",
       "sameAs": [
@@ -62,7 +62,7 @@
     }
     </script>
 
-    <link rel="icon" type="image/jpeg" href="assets/headshot.jpeg">
+    <link rel="icon" type="image/jpeg" href="assets/headshot2.png">
 </head>
 <body>
     <table border=0 style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
@@ -73,7 +73,7 @@
                 <table border=0 style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
                     <tr style="padding:0px">
                         <td style="padding:2.5%;width:20%;max-width:20%;vertical-align:top">
-                            <a href="assets/headshot.jpeg"><img style="width:100%;max-width:100%" alt="profile photo" src="assets/headshot.jpeg" class="rounded-circle"></a>
+                            <a href="assets/headshot2.png"><img style="width:100%;max-width:100%" alt="profile photo" src="assets/headshot2.png" class="rounded-circle"></a>
                         </td>
                         <td style="padding:2.5%;width:70%;vertical-align:middle">
                             <h1 style="margin-bottom:10px;"><name>Steffen Schotth&ouml;fer</name></h1>
@@ -626,6 +626,16 @@ Sole technical owner of a privately deployed B2B data analytics system, designed
 
         <p style="margin-top:15px;"><strong>Reviewing</strong></p>
   <p>&bull; Reviewing: Program committees and peer review for NeurIPS (top reviewer), ICML, ICLR, AAAI; Journal reviewing includes Journal of Computational Physics, SIAM MMS, Journal of Scientific Computing, and Journal of Optimization Theory and Applications.</p>
+     
+<p style="margin-top:15px;"><strong>Advisory &amp; Governance</strong></p>
+<p>&bull; <strong>NSF Review Panel Member</strong>, Mathematical Foundations of AI (2025):  
+Evaluated proposals on foundational capabilities and limitations of emerging AI systems, including foundation, generative, and federated learning models.</p>
+
+<p>&bull; <strong>Steering Committee Member</strong>, Data Science &amp; Engineering Program,  
+<a href="https://bredesencenter.utk.edu/" target="_blank">Bredesen Center, University of Tennessee Knoxville</a>:  
+Advised curriculum development and research strategy for an interdisciplinary graduate program spanning energy systems, AI, and data-driven science.</p>
+
+
 
     </div>
 </div>
