fix some information

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Sole technical owner of a privately deployed B2B data analytics system, designed
         <p>&bull; <strong><a href="https://www.ornl.gov/content/alston-s-householder-fellowship-applied-mathematics-and-scientific-computing" target="_blank">Alston S. Householder Fellowship</a></strong>, Oak Ridge National Laboratory, 2023
         <br>Distinguished staff fellowship in applied mathematics and scientific computing at ORNL funded by the US DOE Advanced Scientific Computing Research (ASCR) program.</p>
 
-        <p>&bull; <strong><a href="https://www.ornl.gov/content/laboratory-directed-research-development" target="_blank">ORNL Early Career Award</a></strong>, Oak Ridge National Laboratory, 2024
+        <p>&bull; <strong><a href="https://www.ornl.gov/content/laboratory-directed-research-development" target="_blank">ORNL Early Career Award</a></strong>, Oak Ridge National Laboratory, 2025
         <br>Principal Investigator for two-year project on agentic AI for scientific simulation workflows.</p>
 
         <p>&bull; <strong><a href="https://www.foundationsofdl.de/" target="_blank">DFG Priority Programme Fellow</a></strong>, SPP 2298 &ldquo;Theoretical Foundations of Deep Learning&rdquo;, 2021&ndash;2024</p>
@@ -625,7 +625,7 @@ Sole technical owner of a privately deployed B2B data analytics system, designed
         <p>&bull; Minisymposium "Federated Learning and Data Mining in Distributed Environments" at <a href="https://math.utk.edu/siam-seas/" target="_blank">SIAM SEAS 2025</a></p>
 
         <p style="margin-top:15px;"><strong>Reviewing</strong></p>
-  <p>&bull; Reviewing: Program committees and peer review for NeurIPS (top reviewer), ICML, ICLR, AAAI; Journal reviewing includes Journal of Computational Physics, SIAM MMS, Journal of Scientific Computing, and Journal of Optimization Theory and Applications.</p>
+  <p>&bull; Program committees and peer review for NeurIPS (top reviewer), ICML, ICLR, AAAI; Journal reviewing includes Journal of Computational Physics, SIAM MMS, Journal of Scientific Computing, and Journal of Optimization Theory and Applications.</p>
      
 <p style="margin-top:15px;"><strong>Advisory &amp; Governance</strong></p>
 <p>&bull; <strong>NSF Review Panel Member</strong>, Mathematical Foundations of AI (2025):  
