--- a/index.html
+++ b/index.html
@@ -286,6 +286,7 @@
                 <papertitle>Geometry-aware training of factorized layers in tensor Tucker format</papertitle>
                 <br>
                 Schotth&ouml;fer, Zhou, Albring, Gauger
+                Zangrando,  Schotth&ouml;fer, Ceruti, Kusch, Tudisco
                 <br>
                 <em>NeurIPS 2024</em>
                 <br>[<a href="https://proceedings.neurips.cc/paper_files/paper/2024/hash/ea48cb23a02ec3b895b0b0124307b0ec-Abstract-Conference.html" target="_blank">proceedings</a>] [<a href="https://arxiv.org/abs/2305.19059" target="_blank">arXiv</a>]
