--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ Sole technical owner of a privately deployed B2B data analytics system, designed
         <h4>Mentorship</h4>
 
         <p>&bull; Chinmay Patwardhan, visiting researcher at ORNL [2026], Ph.D. student at KIT</p>
-        <p>&bull; Thomas Snyder, summer intern at ORNL [2024 &amp; 2025], undergrad at Yale</p>
+        <p>&bull; Thomas Snyder, summer intern at ORNL [2024 &amp; 2025], Undergrad student at Yale University</p>
         <p>&bull; Hanna Park, summer intern at ORNL [2025], Ph.D. student at Mississippi State</p>
         <p>&bull; Jakob Maisch, Bachelor Thesis at KIT [2023], M.Sc. student at KIT</p>
         <p>&bull; Tim Stoll, Bachelor Thesis at KIT [2022]</p>
