--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@ Sole technical owner of a privately deployed B2B data analytics system, designed
         <h4>Selected Presentations</h4>
         <p>&bull; <em><a href="https://neurips.cc/virtual/2025/loc/mexico-city/oral/130317" target="_blank">NeurIPS 2025 Oral</a></em>: Dynamical Low-Rank Compression of Neural Networks with Robustness under Adversarial Attacks</p>
                <p>&bull; <em><a href="https://content.govdelivery.com/accounts/USDOEOS/bulletins/3daab88" target="_blank">ASCR Workshop 2025</a></em>: Uncertainty-aware inverse modeling for federated scientific discovery across DOE facilities</p>
-        <p>&bull; <em><a href="https://proceedings.mlr.press/v162/schotthofer22a.html" target="_blank">ICML 2022 Spotlight</a></em>: Structure Preserving Neural Networks: A Case Study in the Entropy Closure of the Boltzmann Equation</p>
+        <p>&bull; <em><a href="https://icml.cc/virtual/2022/spotlight/15980" target="_blank">ICML 2022 Spotlight</a></em>: Structure Preserving Neural Networks: A Case Study in the Entropy Closure of the Boltzmann Equation</p>
         <p>&bull; <em><a href="https://arc.aiaa.org/doi/10.2514/6.2020-3130" target="_blank">AIAA AVIATION 2020 Best Student Paper</a></em>: Windowing Regularization Techniques for Unsteady Aerodynamic Shape Optimization </p>
         <hr style="margin:25px 0;">
 
